--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,13 +1,13 @@
 on: [push, pull_request]
 name: test
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Run golangci-lint
-        uses: actions-contrib/golangci-lint@v1
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+  #     - name: Run golangci-lint
+  #       uses: actions-contrib/golangci-lint@v1
 
   test:
     strategy:
