--- a/.github/workflows/test-pull_request-master.yml
+++ b/.github/workflows/test-pull_request-master.yml
@@ -1,16 +1,16 @@
 on:
-  push:
+  pull_request:
     branches:
       - master
-name: test
+name: test-pull_request-master
 jobs:
-  # lint:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout code
-  #       uses: actions/checkout@v2
-  #     - name: Run golangci-lint
-  #       uses: actions-contrib/golangci-lint@v1
+  lint:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Run golangci-lint
+        uses: actions-contrib/golangci-lint@v1
 
   test:
     strategy:
