--- a/.github/workflows/test-push-master.yml
+++ b/.github/workflows/test-push-master.yml
@@ -1,16 +1,16 @@
 on:
-  pull_request:
+  push:
     branches:
       - master
-name: test
+name: test-push-master
 jobs:
-  lint:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      - name: Run golangci-lint
-        uses: actions-contrib/golangci-lint@v1
+  # lint:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout code
+  #       uses: actions/checkout@v2
+  #     - name: Run golangci-lint
+  #       uses: actions-contrib/golangci-lint@v1
 
   test:
     strategy:
